petal_core/src/snapshots/petal__petal__parser__tests__literals-3.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"\\\"hello\\\"\")"
---
(
    [],
    [
        ExprNode {
            expr: String(
                "hello",
            ),
            span: Span {
                start: Pos(
                    0,
                ),
                end: Some(
                    Pos(
                        6,
                    ),
                ),
            },
        },
    ],
)
